syntax = "proto3";

package server_grpc;

option go_package = "internal/server/proto";

message PostUpdatesRequest {
  bytes metrics= 1;
}

message PostUpdatesResponse {
  string error = 1; // ошибка
}

service Handlers {
  rpc PostUpdates(PostUpdatesRequest) returns (PostUpdatesResponse);
}
